# taiwan-weather

./: .env.example  .gitignore  README.md  app.py  data_taiwan_future_1_week.json  data_taiwan_future_3_days.json  pyproject.toml
model/: LocationCache.py  TimeCache.py  getHumidity.py  getTemperature.py  getWeather.py  getWeatherThreeDays.py  getWeatherWeek.py  trigger_discord.py
src/css/: all.css  all.css.map
src/javascript/utils/: animationListBar.js
src/scss/: all.css  all.scss
src/scss/abstracts/: _mixins.scss
src/scss/base/: _typography.scss
src/scss/layout/: _navigation.scss
src/scss/pages/: _index.scss
static/: index.html
static/src/css/: all.css  all.css.map  chart.css  new.css
static/src/javascript/components/: animationMap.js  getHumidity.js  getLocationWeather.js  getTempHumidity.js  hero.js  taiwanWeather.js  togglePrinciple.js
static/src/javascript/utils/: animationListBar.js  bot.js  chart.js  geo.js
static/src/scss/: all.css  all.css.map  all.scss
static/src/scss/abstracts/: _mixins.scss  _variables.scss
static/src/scss/base/: _base.scss  _typography.scss
static/src/scss/components/: _button.scss  _list-bar.scss
static/src/scss/layout/: _navigation.scss
static/src/scss/pages/: _index.scss
