[tool.poetry]
name = "taiwan-weather"
version = "0.1.0"
description = "A project displays daily and weekly weather forecasts for Taiwan, based on the APIs from the Central Weather Administration(CWA) of Taiwan."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
python-dotenv = "^1.0.1"
pydantic = "^2.9.2"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
